SigmaCodebackup3rdSep/objects/Error_Log__c.object
<CustomObject>
    <fields>
        <fullName>Error_Description__c</fullName>
        <label>Error Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error_Scenario__c</fullName>
        <label>Error Scenario</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Stock Receiving</fullName>
                </value>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Picking</fullName>
                </value>
                <value>
                    <fullName>BTI</fullName>
                </value>
                <value>
                    <fullName>ITB</fullName>
                </value>
                <value>
                    <fullName>Stock Adjustments</fullName>
                </value>
                <value>
                    <fullName>Stock Movements</fullName>
                </value>
                <value>
                    <fullName>ManufacturingRun</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Community Upload</fullName>
                </value>
                <value>
                    <fullName>Sigma Order</fullName>
                </value>
                <value>
                    <fullName>Accountsubscription</fullName>
                </value>
                <value>
                    <fullName>SavePaymentCntrl</fullName>
                </value>
                <value>
                    <fullName>LinkageServiceClass</fullName>
                </value>
                <value>
                    <fullName>AddShipmentProductsLtng</fullName>
                </value>
                <value>
                    <fullName>PickingOrder</fullName>
                </value>
                <value>
                    <fullName>Vendor Community</fullName>
                </value>
                <value>
                    <fullName>DemandPlanning</fullName>
                </value>
                <value>
                    <fullName>WOSavePaymentCntrl</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Object_Id__c</fullName>
        <label>Object Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Data__c</fullName>
        <label>Record Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Error_Log__c</fullName>
        <label>Salesforce Error Log</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Error_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Error_Description__c</columns>
        <columns>Module__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Detail</fullName>
        <columns>NAME</columns>
        <columns>Module__c</columns>
        <filterScope>Mine</filterScope>
        <label>Detail</label>
    </listViews>
    <nameField>
        <displayFormat>ERR-{0000}</displayFormat>
        <label>Error Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>